# portfolio-based-rl

./: .gitignore  README.md  pyproject.toml
data/real/: ohlcv.npz
paper/: README.md  main.aux  main.out  main.tex
reports/real/cash/cash_seed0_83bd6dd641/: config.json  splits.csv  summary.json
reports/real/equal/equal_seed0_83bd6dd641/: config.json  splits.csv  summary.json
scripts/: fetch_stooq.py  run_demo.py  run_real_experiments.py
src/portfolio_rl/: __init__.py  config.py
src/portfolio_rl/agents/: __init__.py  base.py  baselines.py  random_agent.py
src/portfolio_rl/agents/ppo/: __init__.py  (+4 more)
src/portfolio_rl/data/: __init__.py  array_source.py  base.py  sliced_source.py  splits.py  types.py
src/portfolio_rl/env/: __init__.py  portfolio_env.py  state.py  types.py
src/portfolio_rl/eval/: __init__.py  bootstrap.py  metrics.py  rollout.py
src/portfolio_rl/execution/: __init__.py  base.py  simple.py
src/portfolio_rl/experiments/: __init__.py  collect.py  reporting.py  run.py  run_demo.py  walk_forward.py  walk_forward_demo.py
src/portfolio_rl/experts/: __init__.py  base.py
src/portfolio_rl/features/: __init__.py  base.py  basic.py  pipeline.py
src/portfolio_rl/reward/: __init__.py  base.py  simple.py
src/portfolio_rl/utils/: __init__.py  seed.py  types.py  validation.py
tests/: test_baselines_experiment.py  test_env.py  test_eval.py  test_execution.py  test_features.py  test_integration_env.py  test_manifest_collect.py  test_metrics_bootstrap_ci.py  test_ppo.py  test_ppo_factory_walk_forward.py  test_reporting.py  test_walk_forward.py
(+3 files in other folders)
